--- a/index.html
+++ b/index.html
@@ -54,13 +54,18 @@
                 <div class="modal-body">
                     <form>
                         <div class="form-row">
-                            <div class="form-group col-md-6">
+                            <div class="form-group col-md-5">
                                 <label>Ingreso</label>
                                 <input type="date" class="form-control" id="txtIngreso" placeholder="Ingreso">
                             </div>
-                            <div class="form-group col-md-6">
+                            <div class="form-group col-md-5">
                                 <label>Egreso</label>
                                 <input type="date" class="form-control" id="txtEgreso" placeholder="Egreso">
+                            </div>
+                            <div class="form-group col-md-2">
+                                <label>Noches</label>
+                                <label id="txtCantNoches" class="form-control" for=""></label>
+                                <!-- <input type="text" value="0" disabled class="form-control" id="txtCantNoches"> -->
                             </div>
                         </div>
 
@@ -145,28 +150,48 @@
     </div>
 
     <br>
-    <button id="actualizar" class="btn btn-primary">Actualizar</button>
+
+    <form action="">
+        <div class="form-group">
+            <div class="form-group col-md-2">
+                <label>Unidad</label>
+                <select id="txtUnidad2" class="form-control">
+                    <option value="" selected>Seleccione</option>
+                    <option value="1">Departamento 1B</option>
+                    <option value="2">Departamento 4E</option>
+                </select>
+            </div>
+            <div class="form-group col-md-2">
+                <button id="buscar" class="btn btn-primary">Buscar</button>
+            </div>
+        </div>
+    </form>
 
     <div class="container-fluid">
-        <br>
-        <table id="example" class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <th>Monto total</th>
-                    <th>Ingreso</th>
-                    <th>Egreso</th>
-                    <th>Nombre</th>
-                    <th>Localidad</th>
-                    <th>DNI</th>
-                    <th>Email</th>
-                    <th>Unidad</th>
-                    <th>Origen</th>
-                    <th>Observaciones</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
+        <div>
+
+            <br>
+            <table id="example" class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th>Monto total</th>
+                        <th>Ingreso</th>
+                        <th>Egreso</th>
+                        <th>Nombre</th>
+                        <th>Localidad</th>
+                        <th>DNI</th>
+                        <th>Email</th>
+                        <th>Unidad</th>
+                        <th>Origen</th>
+                        <th>Observaciones</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
@@ -186,6 +211,7 @@
 
     <script src="main.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="http://momentjs.com/downloads/moment.min.js"></script>
 </body>
 
 </html>
