--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="submit" id="registrar" class="btn btn-primary">Registrar</button>
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                    <!-- <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button> -->
                 </div>
             </div>
         </div>
