depto, cochera y saldo

--- a/index.html
+++ b/index.html
@@ -396,6 +396,7 @@
                         <th>Monto total</th>
                         <th>Ingreso</th>
                         <th>Egreso</th>
+                        <th>Depto</th>
                         <th>Saldo</th>
                         <th>Nombre</th>
                         <th>Observaciones</th>
