--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/fixedheader/3.2.2/css/fixedHeader.bootstrap4.min.css">
-    <title>Main</title>
+    <title>Reservas</title>
 </head>
 
 <body>
@@ -27,14 +27,8 @@
                             class="sr-only">(current)</span></a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
-
-
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -148,7 +142,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="submit" id="registrar" class="btn btn-primary">Registrar</button>
-                    <!-- <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button> -->
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
                 </div>
             </div>
         </div>
@@ -268,7 +262,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="submit" id="editar" class="btn btn-primary">Editar</button>
-                    <!-- <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button> -->
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
                 </div>
             </div>
         </div>
