--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
             </div>
             <div class=" form-group col-md-2">
                 <button id="buscar" class="btn btn-primary">Buscar</button>
+                <button id="borrar" onclick="getTabla2()" class="btn btn-danger">Borrar</button>
             </div>
         </div>
     </form>
