--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
             </div>
             <div class=" form-group col-md-2">
                 <button id="buscar" class="btn btn-primary">Buscar</button>
+                <button id="noti" class="btn btn-primary">Noti</button>
                 <button id="borrar" onclick="getTabla2()" class="btn btn-danger">Borrar</button>
             </div>
         </div>
@@ -420,6 +421,7 @@
         crossorigin="anonymous"></script>
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/push.js/0.0.11/push.min.js"></script>
     <script src="main.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://unpkg.com/boxicons@2.1.1/dist/boxicons.js"></script>
